# IPv6Map

./: .gitignore  CMakeLists.txt  LICENSE  README.md  relay.py  soku-protocol-extension.md
src/: ipv6map.h  version.rc.in
src/IPv6Map/: addr_map.cpp  addr_map.h  debug.h  dll_main.c  hash_addr.cpp  hash_addr.h  inject.c  inject.h  my_socket.c  my_socket.h  socket.cpp  socket.h  socket_manage.cpp  socket_manage.h
src/IPv6MapSokuMod/: debug.h  sokuhooks.c  sokuhooks.h  sokumod_main.c
